--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Drag Papers ❤️</title>
   <link rel='stylesheet' href='https://fonts.googleapis.com/css2?family=Short+Stack&amp;family=Homemade+Apple&amp;display=swap'>
   <link rel="stylesheet" href="./style.css">
@@ -38,6 +39,11 @@
     @keyframes spin {
       from { transform: rotate(0deg); }
       to { transform: rotate(360deg); }
+    }
+
+    /* Responsive Drag */
+    .paper {
+      touch-action: none;
     }
   </style>
 </head>
@@ -93,7 +99,6 @@
   </div>
 
   <!-- Script -->
-  <script src="./script.js"></script>
   <script>
     // Tampilkan notifikasi musik dengan animasi
     window.addEventListener("load", function() {
@@ -101,6 +106,11 @@
       setTimeout(() => {
         musicNotification.classList.add("show");
       }, 500);
+      
+      // Mulai musik setelah interaksi pengguna
+      window.addEventListener("click", function () {
+        document.getElementById("background-music").play();
+      }, { once: true });
     });
 
     // Tombol Reset
@@ -110,6 +120,32 @@
         const el = document.getElementById(id);
         el.style.transform = "";
         el.style.zIndex = "";
+      });
+    });
+
+    // Drag support untuk mobile
+    document.querySelectorAll(".paper").forEach(paper => {
+      let offsetX, offsetY, isDragging = false;
+
+      paper.addEventListener("touchstart", (e) => {
+        const touch = e.touches[0];
+        offsetX = touch.clientX - paper.getBoundingClientRect().left;
+        offsetY = touch.clientY - paper.getBoundingClientRect().top;
+        isDragging = true;
+      });
+
+      paper.addEventListener("touchmove", (e) => {
+        if (!isDragging) return;
+        e.preventDefault();
+        const touch = e.touches[0];
+        paper.style.position = "absolute";
+        paper.style.left = `${touch.clientX - offsetX}px`;
+        paper.style.top = `${touch.clientY - offsetY}px`;
+        paper.style.zIndex = 1000;
+      });
+
+      paper.addEventListener("touchend", () => {
+        isDragging = false;
       });
     });
   </script>
